# attrs-serde

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  package.json  pyproject.toml  tox.ini
attrs_serde/: __init__.py  attrs_serde.py
ci/: release.py
tests/: test_benchmark.py  test_dict.py
tests/snapshots/: snap_test_dict.py
